--- a/module-admin/src/main/resources/templates/common/index.html
+++ b/module-admin/src/main/resources/templates/common/index.html
@@ -40,7 +40,7 @@
 
         const getDashboardData = (param) => {
             $.ajax({
-                url: '/admin/dashboardView'
+                url: '/admin/dashboard'
                 , dataType: 'html'
                 , data: param
                 , type: 'get'
