feat: SNB IA 정리

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -10,84 +10,7 @@
                         <span class="pcoded-mtext">회원관리</span>
                     </a>
                 </li>
-                <li class="pcoded-hasmenu">
-                    <a href="javascript:void(0)">
-                        <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span>
-                        <span class="pcoded-mtext">Page layouts</span>
-                    </a>
-                    <ul class="pcoded-submenu">
-                        <li class=" pcoded-hasmenu">
-                            <a href="javascript:void(0)">
-                                <span class="pcoded-mtext">Vertical</span>
-                            </a>
-                            <ul class="pcoded-submenu">
-                                <li class=" ">
-                                    <a href="menu-static.html">
-                                        <span class="pcoded-mtext">Static Layout</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-header-fixed.html">
-                                        <span class="pcoded-mtext">Header Fixed</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-compact.html">
-                                        <span class="pcoded-mtext">Compact</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-sidebar.html">
-                                        <span class="pcoded-mtext">Sidebar Fixed</span>
-                                    </a>
-                                </li>
 
-                            </ul>
-                        </li>
-                        <li class=" pcoded-hasmenu">
-                            <a href="javascript:void(0)">
-                                <span class="pcoded-mtext">Horizontal</span>
-                            </a>
-                            <ul class="pcoded-submenu">
-                                <li class=" ">
-                                    <a href="menu-horizontal-static.html" target="_blank">
-                                        <span class="pcoded-mtext">Static Layout</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-horizontal-fixed.html" target="_blank">
-                                        <span class="pcoded-mtext">Fixed layout</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-horizontal-icon.html" target="_blank">
-                                        <span class="pcoded-mtext">Static With Icon</span>
-                                    </a>
-                                </li>
-                                <li class=" ">
-                                    <a href="menu-horizontal-icon-fixed.html" target="_blank">
-                                        <span class="pcoded-mtext">Fixed With Icon</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" ">
-                            <a href="menu-bottom.html">
-                                <span class="pcoded-mtext">Bottom Menu</span>
-                            </a>
-                        </li>
-                        <li class=" ">
-                            <a href="box-layout.html" target="_blank">
-                                <span class="pcoded-mtext">Box Layout</span>
-                            </a>
-                        </li>
-                        <li class=" ">
-                            <a href="menu-rtl.html" target="_blank">
-                                <span class="pcoded-mtext">RTL</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
                 <li class="">
                     <a href="/admin/dormant-members/view">
                         <span class="pcoded-micon"><i class="feather icon-menu"></i></span>
@@ -110,6 +33,213 @@
                         <span class="pcoded-mtext">일기관리</span>
                     </a>
                 </li>
+            </ul>
+
+            <div class="pcoded-navigatio-lavel">서비스관리</div>
+            <ul class="pcoded-item pcoded-left-item">
+                <li class="">
+                    <a href="/admin/inquiry/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">문의관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/faqs/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">FAQ관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/news/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">새식소식</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/policy/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">약관 및 정책관리</span>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="pcoded-navigatio-lavel">통계관리</div>
+            <ul class="pcoded-item pcoded-left-item">
+                <li>
+                    <a href="/admin/statistics/user/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">회원통계</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">분양통계</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">반려동물통계</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">일기통계</span>
+                    </a>
+                </li>
+                
+            </ul>
+            
+            <div class="pcoded-navigatio-lavel">통합관리</div>
+            <ul class="pcoded-item pcoded-left-item">
+                <li class="">
+                    <a href="/admin/banner/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">배너관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/popup/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">팝업관리</span>
+                    </a>
+                </li>
+                <li class="pcoded-hasmenu">
+                    <a href="javascript:void(0)">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">메시지관리</span>
+                    </a>
+                    <ul class="pcoded-submenu">
+                        <li class="">
+                            <a href="/admin/sendHistory/view">
+                                <span class="pcoded-mtext">발송이력</span>
+                            </a>
+                        </li>
+                        <li class="">
+                            <a href="/admin/templateManage/view">
+                                <span class="pcoded-mtext">템플릿관리</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="">
+                    <a href="/admin/managerBoard/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">관리자 게시판</span>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="pcoded-navigatio-lavel">시스템관리</div>
+            <ul class="pcoded-item pcoded-left-item">
+                <li class="">
+                    <a href="/admin/resources/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">자원관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/roles/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">권한관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/access-log/view">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">로그관리</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/admin/setting">
+                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
+                        <span class="pcoded-mtext">설정</span>
+                    </a>
+                </li>
+
+                <!--<li class="pcoded-hasmenu">
+                   <a href="javascript:void(0)">
+                       <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span>
+                       <span class="pcoded-mtext">Page layouts</span>
+                   </a>
+                   <ul class="pcoded-submenu">
+                       <li class=" pcoded-hasmenu">
+                           <a href="javascript:void(0)">
+                               <span class="pcoded-mtext">Vertical</span>
+                           </a>
+                           <ul class="pcoded-submenu">
+                               <li class=" ">
+                                   <a href="menu-static.html">
+                                       <span class="pcoded-mtext">Static Layout</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-header-fixed.html">
+                                       <span class="pcoded-mtext">Header Fixed</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-compact.html">
+                                       <span class="pcoded-mtext">Compact</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-sidebar.html">
+                                       <span class="pcoded-mtext">Sidebar Fixed</span>
+                                   </a>
+                               </li>
+
+                           </ul>
+                       </li>
+                       <li class=" pcoded-hasmenu">
+                           <a href="javascript:void(0)">
+                               <span class="pcoded-mtext">Horizontal</span>
+                           </a>
+                           <ul class="pcoded-submenu">
+                               <li class=" ">
+                                   <a href="menu-horizontal-static.html" target="_blank">
+                                       <span class="pcoded-mtext">Static Layout</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-horizontal-fixed.html" target="_blank">
+                                       <span class="pcoded-mtext">Fixed layout</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-horizontal-icon.html" target="_blank">
+                                       <span class="pcoded-mtext">Static With Icon</span>
+                                   </a>
+                               </li>
+                               <li class=" ">
+                                   <a href="menu-horizontal-icon-fixed.html" target="_blank">
+                                       <span class="pcoded-mtext">Fixed With Icon</span>
+                                   </a>
+                               </li>
+                           </ul>
+                       </li>
+                       <li class=" ">
+                           <a href="menu-bottom.html">
+                               <span class="pcoded-mtext">Bottom Menu</span>
+                           </a>
+                       </li>
+                       <li class=" ">
+                           <a href="box-layout.html" target="_blank">
+                               <span class="pcoded-mtext">Box Layout</span>
+                           </a>
+                       </li>
+                       <li class=" ">
+                           <a href="menu-rtl.html" target="_blank">
+                               <span class="pcoded-mtext">RTL</span>
+                           </a>
+                       </li>
+                   </ul>
+               </li>-->
                 <!--        <li class="pcoded-hasmenu">
                           <a href="javascript:void(0)">
                             <span class="pcoded-micon"><i class="feather icon-box"></i></span>
@@ -368,109 +498,9 @@
                         </li>-->
             </ul>
 
-            <div class="pcoded-navigatio-lavel">서비스관리</div>
-            <ul class="pcoded-item pcoded-left-item">
-                <li class="">
-                    <a href="/admin/inquiry/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">문의관리</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/admin/faqs/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">FAQ관리</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/admin/news/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">새식소식</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/admin/policy/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">약관 및 정책관리</span>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="pcoded-navigatio-lavel">통합관리</div>
-            <ul class="pcoded-item pcoded-left-item">
-                <li class="">
-                    <a href="/admin/banner/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">배너관리</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/admin/popup/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">팝업관리</span>
-                    </a>
-                </li>
-                <li class="pcoded-hasmenu">
-                    <a href="javascript:void(0)">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">메시지관리</span>
-                    </a>
-                    <ul class="pcoded-submenu">
-                        <li class="">
-                            <a href="/admin/sendHistory/view">
-                                <span class="pcoded-mtext">발송이력</span>
-                            </a>
-                        </li>
-                        <li class="">
-                            <a href="/admin/templateManage/view">
-                                <span class="pcoded-mtext">템플릿관리</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="">
-                    <a href="/admin/managerBoard/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">관리자 게시판</span>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="pcoded-navigatio-lavel">시스템관리</div>
-            <ul class="pcoded-item pcoded-left-item">
-                <li class="">
-                    <a href="/admin/resources/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">자원관리</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/admin/roles/view">
-                        <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                        <span class="pcoded-mtext">권한관리</span>
-                    </a>
-                </li>
-                <!--        <li class="pcoded-hasmenu">
-                          <a href="javascript:void(0)">
-                            <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                            <span class="pcoded-mtext">코드관리</span>
-                          </a>
-                        </li>-->
-                <!--<li class="pcoded-hasmenu">
-                  <a href="javascript:void(0)">
-                    <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                    <span class="pcoded-mtext">로그관리</span>
-                  </a>
-                </li>-->
-                <!--<li class="pcoded-hasmenu">
-                  <a href="javascript:void(0)">
-                    <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                    <span class="pcoded-mtext">설정</span>
-                  </a>
-                </li>-->
-            </ul>
-
+            <!--/*
             <th:block th:utext="${@menuService.menuPrint()}" />
+            */-->
         </div>
     </nav>
 
